test/sema/typeck/assign/reassign-chained-struct-field.dora
struct Inner { value: Int32 }
struct Outer { inner: Inner }
fn f() { let x = Outer(Inner(0i32)); x.inner.value = 10i32; }
